# openqueue

./: .gitignore  LICENSE
app/: Cargo.toml  build.rs
app/benchmarks/: openqueue-benchmark.js  publish-benchmark.js
app/src/: lib.rs  main.rs
app/src/api/: ack.rs  consume.rs  control_panel.rs  index.rs  mod.rs  publish.rs  stats.rs
app/src/clients/: database.rs  mod.rs
app/src/persistence/: error.rs  message.rs  mod.rs  queue.rs
app/src/server/: routes.rs  server.rs
app/templates/: index.html  layout.html
