[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
rocksdb = "0.22.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.20.2"
askama = "0.12"
askama_axum = "0.4"
num_cpus = "1.16"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
deadpool = "0.10"
tokio-postgres = "0.7"
tower-governor = "0.10"
parking_lot = "0.12"

[package.metadata.askama]
dir = "templates"